<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.isen.khass.metronometutorial.MetronomeActivity">

   <LinearLayout
       android:id="@+id/LinearLayout1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:id="@+id/bps"
           android:layout_width="0px"
           android:layout_height="90dp"
           android:layout_weight="1"
           android:text="@string/bps"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:textColor="@color/yellow"
           android:textSize="30sp"
           android:gravity="center_vertical|center_horizontal"
           tools:ignore="HardcodedText,Suspicious0dp" />

       <TextView
           android:id="@+id/timesignature"
           android:layout_width="0px"
           android:layout_height="90dp"
           android:layout_weight="1"
           android:gravity="center_vertical|center_horizontal"
           android:text="@string/bps"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:textColor="@color/yellow"
           android:textSize="30sp"
           tools:ignore="Suspicious0dp" />

       <TextView
           android:id="@+id/currentBeat"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_weight="1.00"
           android:gravity="center_vertical|center_horizontal"
           android:text="one"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:textColor="@color/yellow"
           android:textSize="30sp"/>
   </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bps"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/minus"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onMinusClick"
            android:text="@string/minus"
            android:textSize="30sp"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/plus"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPlusClick"
            android:text="@string/plus"
            android:textSize="30sp"
            tools:ignore="OnClick" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timesignature"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/beatspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/notespinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/volume"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/volumebar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/startstop"
        android:onClick="onStartStopClick"
        android:text="@string/start"
        android:textSize="80dp"
        tools:ignore="OnClick" />
</LinearLayout>
